--- a/src/archutils/Android/Framework/AndroidManifest.xml
+++ b/src/archutils/Android/Framework/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.stepmania.android"
-    android:versionCode="1">
+    android:versionCode="0">
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="17"
         android:targetSdkVersion="19" />
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
 
-        <activity android:name=".StepMania"
+        <activity android:name=".StepStart"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden">
             <!-- Tell NativeActivity the name of or .so -->
@@ -27,7 +27,7 @@
 
 <!--
 
-(c) 2014-x Renaud Lepage
+(c) 2014 Renaud Lepage
 All rights reserved.
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the
