--- a/src/archutils/Android/Framework/AndroidManifest.xml
+++ b/src/archutils/Android/Framework/AndroidManifest.xml
@@ -11,6 +11,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <!-- Bluetooth-based input. Future, and honestly not recommended -->
+    <!--uses-permission android:name="android.permission.BLUETOOTH" /-->
+
+    <!-- Future version: Network - ->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    -->
+
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
