--- a/src/archutils/Android/Framework/AndroidManifest.xml
+++ b/src/archutils/Android/Framework/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     -->
-
+    <uses-feature android:glEsVersion="0x00020000" />
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
