Repaired android build. Most likely still not working

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.1.0'
+    }
+}
 import java.util.regex.Pattern
 apply plugin: 'android'
 
@@ -12,7 +21,7 @@ project.ext {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.0.0'
+    buildToolsVersion '20.0.0'
     // Deactivate the automated JNI step altogether.
     // as of Android-Gradle 0.7.3, it's not optimal for this task.
 //    sourceSets.main.jni.srcDirs = []
@@ -36,12 +45,12 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         debug {
             // jniDebugBuild true
-            runProguard false
+            minifyEnabled false
             debuggable true
         }
     }
@@ -93,8 +102,9 @@ android {
     }
 }
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.google.android.gms:play-services:+'
+//    compile 'com.android.support:appcompat-v7:+'
+//    compile 'com.google.android.gms:play-services:+'
+//  the above will be replaced by the way more pure C++ libs.
 }
 project.afterEvaluate{
     preBuild.dependsOn("redirLibs")
@@ -102,18 +112,20 @@ project.afterEvaluate{
 task compileFFMPEG(type:Exec){
     // Compile FFMPEG using a specific script
     workingDir 'extern/android'
-    commandLine './build_ffmpeg.sh',project.ext.nativearch,project.android.defaultConfig.minSdkVersion
+    System.out.println project.ext.nativearch + " " + project.android.defaultConfig.minSdkVersion.mApiLevel
+
+    commandLine './build_ffmpeg.sh',project.ext.nativearch,project.android.defaultConfig.minSdkVersion.mApiLevel
 }
 
 task compileStepmania(type:Exec){
     // Build the Skeleton[s?]
     workingDir '.'
-    commandLine project.ext.ndkDir+'/ndk-build','-j16','APP_PLATFORM=android-'+project.android.defaultConfig.minSdkVersion,'NDK_PROJECT_PATH=src/','APP_BUILD_SCRIPT=src/Android.mk','NDK_APPLICATION_MK=src/Application.mk','NDK_MODULE_PATH=./','APP_ABI='+project.ext.eabi
+    commandLine project.ext.ndkDir+'/ndk-build','-j16','APP_PLATFORM=android-'+project.android.defaultConfig.minSdkVersion.mApiLevel,'NDK_PROJECT_PATH=src/','APP_BUILD_SCRIPT=src/Android.mk','NDK_APPLICATION_MK=src/Application.mk','NDK_MODULE_PATH=./','APP_ABI='+project.ext.eabi
 }
 task cleanStepmania(type:Exec){
     // Build the Skeleton[s?]
     workingDir '.'
-    commandLine project.ext.ndkDir+'/ndk-build','-j16','APP_PLATFORM=android-'+project.android.defaultConfig.minSdkVersion,'NDK_PROJECT_PATH=src/','APP_BUILD_SCRIPT=src/Android.mk','NDK_APPLICATION_MK=src/Application.mk','NDK_MODULE_PATH=./','APP_ABI='+project.ext.eabi,'clean'
+    commandLine project.ext.ndkDir+'/ndk-build','-j16','APP_PLATFORM=android-'+project.android.defaultConfig.minSdkVersion.mApiLevel,'NDK_PROJECT_PATH=src/','APP_BUILD_SCRIPT=src/Android.mk','NDK_APPLICATION_MK=src/Application.mk','NDK_MODULE_PATH=./','APP_ABI='+project.ext.eabi,'clean'
 }
 task redirLibs(type:Exec){
     // Rename/move some libraries to more NDK-proper paths
