Fix ART because I'm completely stupid.

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 }
 import java.util.regex.Pattern
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 project.ext {
     nativearch = "none";
