--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Traditional Compilation File Stuff.
+.idea/
 build/
 .dirstamp
 .deps
@@ -31,7 +32,7 @@ StepMania-debug
 Xcode/Info.StepMania.plist
 Xcode/plistHelper.hpp
 src/version_updater/VersionUpdater
-src/generated
+src/generated/
 
 # Text Editor Based Items
 ___*
