--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -1,18 +1,25 @@
 include(CMakeProject-lua.cmake)
+
+if(NOT ANDROID)
 include(CMakeProject-glew.cmake)
+endif()
+
 include(CMakeProject-json.cmake)
 if (APPLE OR MSVC)
   include(CMakeProject-mad.cmake)
   include(CMakeProject-zlib.cmake)
   include(CMakeProject-jpeg.cmake)
 endif()
+if (ANDROID)
+    include(CMakeProject-mad.cmake)
+endif()
 if (MSVC AND WITH_OGG)
-  include(CMakeProject-ogg.cmake)
+    include(CMakeProject-ogg.cmake)
   include(CMakeProject-vorbis.cmake)
   include(CMakeProject-vorbisfile.cmake)
 endif()
 if (NOT SYSTEM_PCRE_FOUND)
-  include(CMakeProject-pcre.cmake)
+    include(CMakeProject-pcre.cmake)
 endif()
 include(CMakeProject-tomcrypt.cmake)
 include(CMakeProject-tommath.cmake)
