--- a/src/archutils/Android/Framework/AndroidManifest.xml
+++ b/src/archutils/Android/Framework/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
 <!--
 
-(c) 2014 Renaud Lepage
+(c) 2014-2015 Renaud Lepage
 All rights reserved.
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the
